--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html>
+  <head>
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="./assets/application.css" />
+  </head>
   <body>
+    <div id="main-window"></div>
   </body>
-  <div id="main-window"></div>
   <script>
   require('./renderer/index.js')
   </script>
